--- a/markup/components/head/head.html
+++ b/markup/components/head/head.html
@@ -13,17 +13,17 @@
 <link href="%=static=%css/critical%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 <!--  -->
 <link href="static/css/separate-css/slick-bundle.min.css" rel="stylesheet" type="text/css">
-<link href="%=static=%css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
+<link href="tatic/css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 
 {{#if useSocialMetaTags}}
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="club X2'" />
     <meta property="og:url" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="club X2'" />
     <meta property="og:image" content="" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="300" />
-    <meta property="twitter:description" content="" />
+    <meta property="twitter:description" content=" club X2'" />
     <link rel="image_src" href="" />
 {{/if}}
 
