--- a/markup/components/head/head.html
+++ b/markup/components/head/head.html
@@ -13,7 +13,7 @@
 <link href="%=static=%css/critical%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 <!--  -->
 <link href="static/css/separate-css/slick-bundle.min.css" rel="stylesheet" type="text/css">
-<link href="tatic/css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
+<link href="static/css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 
 {{#if useSocialMetaTags}}
     <meta property="og:title" content="club X2'" />
