--- a/markup/components/head/head.html
+++ b/markup/components/head/head.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
 <meta name="HandheldFriendly" content="true">
-<link href="%=static=%css/critical%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
+<link href="static/css/critical%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 <!--  -->
 <link href="static/css/separate-css/slick-bundle.min.css" rel="stylesheet" type="text/css">
 <link href="static/css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
