--- a/markup/components/directions/directions.html
+++ b/markup/components/directions/directions.html
@@ -11,7 +11,7 @@
 		<div class="paginator"><span>03</span></div>
 		<div class="layout layout-s">
 			<div class="section__content">
-				<h2 class="title__section" role="heading" aria-level="2">Плотная работа<br> <span>в 4 направлениях</span></h2>
+				<h2 class="title__section" role="heading" aria-level="2">Плотная работа<br> <span>в 4 направ&shy;лениях</span></h2>
 				<ul class="directions__list">
 					<li>
 						<h3 class="title__dir" role="heading" aria-level="3">Продукт</h3>
