--- a/markup/components/famous/famous.sass
+++ b/markup/components/famous/famous.sass
@@ -4,10 +4,14 @@
 	padding-bottom: 80px
 	.title__section
 		color: #282626
+		+r(850)
+			margin-bottom: 50px
 
 .slider
 	color: $dark
 	margin-left: -10px
+	+r(850)
+		margin-left: -5px
 	&__item
 		width: 30%//
 		text-align: center
@@ -82,3 +86,6 @@
 				transform: translate(-50%, -50%) rotate(180deg)
 	.slick-slide
 		margin-left: 10px
+		+r(850)
+			margin: 0
+			padding: 0 5px
