--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -2,11 +2,16 @@
 <header class="header">
 	<div class="layout layout-x">
 		<div class="layout layout-s">
-			<a href='#' class="logo js-top">
+			<div class="logo js-top">
 				kovpak
 				<sup>&numero;1</sup>
-			</a>
-			<div class="trigger"></div>
+			</div>
+			<div class="trigger">
+				<button class="trigger__btn">
+					<span class="line line-1"></span>
+					<span class="line line-2"></span>
+				</button>
+			</div>
 			<div class="header__wrap">
 				<nav class="header__nav">
 					<ul class="header__list">
