--- a/markup/components/accordion/accordion.sass
+++ b/markup/components/accordion/accordion.sass
@@ -2,6 +2,8 @@
 
 .accordion
 	padding: 120px 0 140px
+	+r(650)
+		padding: 80px 0 40px
 	.title__section
 		color: #282626
 	&__list
@@ -24,6 +26,7 @@
 		background-color: #fff
 		+r(650)
 			padding: 14px 10px 0 30px
+			width: 100%
 		&.is-active
 			background-color: $yellow
 			.accordion__status
