--- a/markup/components/autor/autor.sass
+++ b/markup/components/autor/autor.sass
@@ -5,6 +5,8 @@
 		padding-bottom: 40px
 	.title__section
 		color: #282626
+		+r(850)
+			margin-bottom: 50px
 
 
 .justified
@@ -26,6 +28,9 @@
 		position: relative
 		box-shadow: 0 10px 10px 0px rgba(0, 0, 0, .5)
 		font-size: 0
+		+r(850)
+			width: 100%
+			max-width: 300px
 		&:before
 			content: ''
 			position: absolute
@@ -56,7 +61,7 @@
 	+r(1024)
 		margin-bottom: 30px
 	+r(450)
-		margin-bottom: 14px
+		margin-bottom: 34px
 	li
 		display: flex
 		margin-bottom: 25px
@@ -65,6 +70,9 @@
 			margin-bottom: 10px
 	b
 		+mb
+	p
+		+r(500)
+			font-size: 14px
 	&__pic
 		position: relative
 		display: inline-block
