--- a/markup/components/directions/directions.sass
+++ b/markup/components/directions/directions.sass
@@ -1,13 +1,18 @@
 
 .directions
 	padding: 80px 0 70px
+	+r(650)
+		padding: 50px 0 30px
 	&__list
 		padding: 0
 		margin: 0 0 60px
 		width: 100%
 		display: flex
 		justify-content: space-between
+		flex-wrap: wrap
 		font-size: 0
+		+r(1024)
+			margin-bottom: 20px
 		li
 			position: relative
 			width: 22%
@@ -15,6 +20,11 @@
 			background-color: #f7f7f7
 			border-radius: 10px
 			overflow: hidden
+			+r(1024)
+				width: 48%
+				margin-bottom: 20px
+			+r(650)
+				width: 100%
 		h3
 			position: absolute
 			top: 0
