--- a/markup/components/head/head.html
+++ b/markup/components/head/head.html
@@ -16,15 +16,15 @@
 <link href="static/css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css">
 
 {{#if useSocialMetaTags}}
-    <meta property="og:title" content="club X2'" />
-    <meta property="og:url" content="" />
-    <meta property="og:description" content="club X2'" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="КЛУБ Х2 С ДИМОЙ КОВПАКОМ" />
+    <meta property="og:url" content="static/img/content/magazine.jpg" />
+    <meta property="og:description" content="КЛУБ Х2 С ДИМОЙ КОВПАКОМ" />
+    <meta property="og:image" content="static/img/content/magazine.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="300" />
-    <meta property="twitter:description" content=" club X2'" />
-    <link rel="image_src" href="" />
+    <meta property="twitter:description" content=" КЛУБ Х2 С ДИМОЙ КОВПАКОМ" />
+    <link rel="image_src" href="static/img/content/magazine.jpg" />
 {{/if}}
 
 <link rel="icon" type="image/png" href="fav.png">
