--- a/markup/components/meeting/meeting.sass
+++ b/markup/components/meeting/meeting.sass
@@ -11,6 +11,8 @@
 			top: 0
 			left: 80%
 			+arr(200, 100, rgba(0, 0, 0, .5), b)
+			+r(1024)
+				left: 10%
 		&:after
 			content: ''
 			position: absolute
@@ -18,6 +20,10 @@
 			bottom: 0
 			left: 36%
 			+arr(400, 200, rgba(0, 0, 0, .5), t)
+			+r(670)
+				+arr(200, 100, rgba(0, 0, 0, .5), t)
+			+r(500)
+				+arr(100, 50, rgba(0, 0, 0, .5), t)
 	&__list
 		position: relative
 		padding: 0
@@ -29,6 +35,8 @@
 		list-style: none
 		font-size: 0
 		text-align: left
+		+r(650)
+			margin: 30px 0 20px
 		li
 			position: relative
 			display: block
@@ -36,6 +44,9 @@
 			vertical-align: top
 			width: 40%
 			margin: 0 auto
+			+r(650)
+				width: 100%
+				margin: 10px auto
 			&:before
 				content: ''
 				position: absolute
