--- a/markup/components/quadrant/quadrant.html
+++ b/markup/components/quadrant/quadrant.html
@@ -23,13 +23,13 @@
 					<li class="quadrant__item quadrant__item_3">
 						<div class="quadrant__num quadrant__num_3">03</div>
 						<div class="quadrant__text">
-							<p>Чувствуешь, что для роста не хватает инструментов, энергии, вовлечения</p>
+							<p>Чувствуешь, что для роста не хватает инструментов, энергии, вовле&shy;чения</p>
 						</div>
 					</li>
 					<li class="quadrant__item quadrant__item_4">
 						<div class="quadrant__num quadrant__num_4 js-ppp" ppp-data="registration">есть решение!</div>
 						<div class="quadrant__text">
-							<p>то тебе необходим клуб единомышленников</p>
+							<p>то тебе необходим клуб едино&shy;мышленников</p>
 						</div>
 					</li>
 				</ul>
