--- a/markup/components/quadrant/quadrant.sass
+++ b/markup/components/quadrant/quadrant.sass
@@ -2,6 +2,8 @@
 .quadrant
 	padding: 130px 0 220px
 	color: $dark
+	+r(850)
+		padding: 60px 0 0px
 	&__list
 		padding: 0
 		margin: 60px auto
@@ -25,6 +27,11 @@
 		color: $dark
 		font-size: 18px
 		+mbl
+		+r(650)
+			width: 100%
+		&:after
+			+r(1024)
+				content: none !important
 		&_1
 			&:after
 				content: ''
@@ -73,6 +80,10 @@
 		box-shadow: -2px 6px 10px 2px rgba(0, 0, 0, .2)
 		background-color: #fff
 		border-radius: 4px
+		+r(650)
+			left: 0px !important
+			right: auto  !important
+			top: 10px !important
 		&_1
 			top: 0
 			left: 0
@@ -94,6 +105,10 @@
 			color: $red
 			text-decoration: underline
 			cursor: pointer
+			+r(1180)
+				transform: translate(-110%, -50%)
+			+r(650)
+				transform: translate(-10%, -50%)
 			&:hover
 				text-decoration: none
 	&__text
@@ -101,6 +116,8 @@
 			text-transform: uppercase
 			font-size: 18px
 			+mbl
+			+r(500)
+				font-size: 14px
 
 	.title__section
 		color: $dark
