--- a/markup/components/x2/x2.html
+++ b/markup/components/x2/x2.html
@@ -27,7 +27,7 @@
 							Проходишь собеседование <br>с директором закрытого клуба
 						</li>
 					</ul>
-					<ul class="todo">
+					<ul class="todo todo-md-reverse">
 						<li  class="todo-last">
 							<div class="todo__num ">
 								<i class="icon-check"></i>
