--- a/markup/components/x2/x2.sass
+++ b/markup/components/x2/x2.sass
@@ -1,7 +1,11 @@
 .x2
 	padding: 120px 0 170px
+	+r(650)
+		padding: 80px 0 40px
 	.title__section
 		color: #282626
+		+r(650)
+			margin-bottom: 50px
 	&__wrap
 		margin-bottom: 100px
 	.section__img
@@ -16,6 +20,8 @@
 	display: flex
 	justify-content: space-between
 	flex-wrap: wrap
+	+r(650)
+		flex-wrap: wrap
 	li
 		display: flex
 		align-items: center
@@ -28,9 +34,19 @@
 		border-bottom: 2px solid $yellow
 		font-size: 18px
 		+mb
+		+r(650)
+			width: 100%
+			border-left: 2px solid $yellow
+			border-bottom: none
+			padding-top: 10px
+	&-md-reverse
+		+r(650)
+			flex-direction: column-reverse
 	.todo-1
 		border-bottom: none
 		z-index: 1
+		+r(650)
+			border-left: none
 		&:after
 			content: ''
 			position: absolute
@@ -41,9 +57,17 @@
 			background-color: $yellow
 			+try(-2px)
 			z-index: -1
+			+r(650)
+				top: 50%
+				width: 2px
+				height: 50%
+				left: 0
+				+trx(0px)
 	.todo-last
 		border-bottom: none
-		z-index: 1
+		z-index:
+		+r(650)
+			border: none
 		&:after
 			content: ''
 			position: absolute
@@ -54,6 +78,12 @@
 			+gh($n, $yellow)
 			+try(-2px)
 			z-index: -1
+			+r(650)
+				top: 0
+				left: 0
+				height: 40%
+				width: 2px
+				+g($n, $yellow)
 		.todo__num
 			background-color: $n
 			width: auto
@@ -72,8 +102,14 @@
 		line-height: 40px
 		font-size: 16px
 		+mbl
+		+r(650)
+			bottom: auto
+			top: 0
+			left: -20px
 	&-bd
 		border-right: 2px solid $yellow
+		+r(650)
+			border: none
 
 
 .icon-check
