--- a/markup/static/scss/fonts.sass
+++ b/markup/static/scss/fonts.sass
@@ -60,8 +60,12 @@ $gray: #e9e9e9
 		font-size: 70px
 		line-height: 1.2em
 		+mbl
-		+r(1024)
-			font-size: 24px
+		+r(1100)
+			font-size: 54px
+		+r(850)
+			font-size: 46px
+		+r(650)
+			font-size: 32px
 		mark
 			color: $yellow
 			background-color: $n
@@ -73,6 +77,10 @@ $gray: #e9e9e9
 		font-size: 30px
 		color: #fff
 		+ml
+		+r(850)
+			font-size: 26px
+		+r(650)
+			font-size: 22px
 		&:after
 			content: ''
 			position: absolute
@@ -87,6 +95,10 @@ $gray: #e9e9e9
 		color: #fff
 		text-transform: uppercase
 		+mbl
+		+r(650)
+			font-size: 32px
+		+r(500)
+			font-size: 28px
 		&:after
 			content: ''
 			position: absolute
@@ -96,6 +108,9 @@ $gray: #e9e9e9
 			height: 8px
 			background-color: $yellow
 			+trx(-120px)
+			+r(650)
+				width: 200px
+				+trx(-20px)
 		span
 			display: block
 			padding-left: 20px
@@ -119,6 +134,8 @@ $gray: #e9e9e9
 		color: #353535
 	&__indent
 		padding-left: 4em
+		+r(500)
+			padding-left: 1em
 
 .btn
 	display: inline-block
